name:                espurge
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alexandre Peyroux
maintainer:          alex@px.io
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable espurge
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4 && <5
                     , aeson
                     , async
                     , bloodhound
                     , exceptions
                     , bytestring
                     , filepath
                     , http-client
                     , http-client-tls
                     , mtl
                     , optparse-applicative
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
